@@ -35,6 +35,7 @@ Engine features:
 * Added 'on_interact' as a possible value for Event types. Essentially the same as 'on_trigger', except the event can ONLY be activated through the hotspot.
 * Support an arbitrary number of Stash tabs. Each tab has a display name and an 'is_private' flag.
 * Added 'save_onstash' property to engine/misc.txt, so it is now possible to disable the automatic save when modifying stash contents.
+* The player's last used Stash tab is now remembered across sessions.
 
 Engine fixes:
 
